# ocrme

./: README.md  pyproject.toml
src/ocrme/: __main__.py
src/ocrme.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
