[project]
name = "ocrme"
version = "0.0.1"
description = "Turn images to text"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["ocr", "images", "text"]

authors = [
  {name = "brokedarius", email = "-@-.org" }
]

maintainers = [
  {name = "brokedarius", email = "-@-.org" }
]

classifiers = [
  "Development Status :: 5 - Production/Stable",

  "Intended Audience :: Developers",
  
  "Topic :: Software Development :: Build Tools",

  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "pillow",
    "pytesseract",
    "tomlkit"
]

[project.scripts]
ocrme = "ocrme.__main__:main"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"ocrme._config" = ["ocrme_config.toml"]